# matrix-algorithms

./: .gitignore  CMakeLists.txt  README.md  matrix_mult.cpp
testing/: testing_1.txt  testing_2.txt  testing_3.txt  testing_4.txt  testing_5.txt  testing_6.txt  testing_7.txt  testing_8.txt  testing_9.txt  testing_errors.txt
